--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 # The directory Mix downloads your dependencies sources to.
 /deps
 
+# Where third-party dependencies like ExDoc output generated docs.
+/doc/
+
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
 
